--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@interactjs/types": "^1.10.2",
     "@saasquatch/stencil-hooks": "^1.0.0",
+    "@shoelace-style/shoelace": "^2.0.0-beta.25",
     "@stencil/core": "^1.17.4",
     "dom-serializer": "^1.2.0",
     "domhandler": "^4.0.0",
     "domutils": "^2.4.4",
     "hotkeys-js": "^3.8.1",
-    "htmlparser2": "^6.0.0"
+    "htmlparser2": "^6.0.0",
+    "interactjs": "^1.10.2"
   },
   "license": "MIT",
   "author": ""
