--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@emotion/css": "^11.1.3",
     "@interactjs/types": "^1.10.2",
     "@saasquatch/stencil-hooks": "^1.0.0",
@@ -32,7 +33,8 @@
     "domutils": "^2.4.4",
     "hotkeys-js": "^3.8.1",
     "htmlparser2": "^6.0.0",
-    "interactjs": "^1.10.2"
+    "interactjs": "^1.10.2",
+    "style-to-object": "^0.3.0"
   },
   "license": "MIT",
   "author": ""
