--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raisins-js",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Visual HTML editor for web components",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -26,9 +26,12 @@
     "@emotion/css": "^11.1.3",
     "@interactjs/types": "^1.10.2",
     "@saasquatch/stencil-hooks": "^1.0.0",
+    "@saasquatch/universal-hooks": "^0.1.3",
     "@shoelace-style/shoelace": "^2.0.0-beta.25",
     "@stencil/core": "^1.17.4",
+    "@types/css-tree": "^1.0.5",
     "@wry/equality": "^0.3.2",
+    "css-tree": "^1.1.3",
     "debug": "^4.3.1",
     "dom-serializer": "^1.2.0",
     "domhandler": "^4.0.0",
@@ -38,5 +41,8 @@
     "style-to-object": "^0.3.0"
   },
   "license": "MIT",
-  "author": ""
+  "author": "",
+  "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2"
+  }
 }
