--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "immer": "^9.0.1",
     "interactjs": "^1.10.2",
     "json-pointer": "^0.6.1",
+    "lodash.clonedeep": "^4.5.0",
     "style-to-object": "^0.3.0"
   },
   "license": "MIT",
