--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "interactjs": "^1.10.2",
     "json-pointer": "^0.6.1",
     "lodash.clonedeep": "^4.5.0",
+    "microbundle": "^0.13.3",
     "style-to-object": "^0.3.0"
   },
   "license": "MIT",
