--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -1,29 +1,43 @@
 {
-  "name": "react-example",
+  "name": "@raisins/example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/css": "latest",
-    "@raisins/core": "*",
+    "@emotion/css": "^11.1.3",
     "@shoelace-style/react": "2.0.0-beta.44",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/css-tree": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "style-to-object": "^0.3.0",
+    "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -39,6 +53,12 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
+    "@storybook/node-logger": "^6.3.0",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.3.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8"
   }
