--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,5 +16,12 @@
   "license": "MIT",
   "devDependencies": {
     "microbundle": "^0.13.3"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@raisins/core": "^1.0.0",
+    "@types/css-tree": "^1.0.5",
+    "style-to-object": "^0.3.0",
+    "typescript": "^4.3.4"
   }
 }
