--- a/packages/stencil-example/package.json
+++ b/packages/stencil-example/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@emotion/css": "^11.1.3",
     "@interactjs/types": "^1.10.2",
+    "@raisins/core": "^1.0.0",
     "@saasquatch/stencil-hooks": "^1.0.0",
     "@saasquatch/universal-hooks": "^0.1.3",
     "@shoelace-style/shoelace": "^2.0.0-beta.25",
@@ -42,7 +43,8 @@
     "json-pointer": "^0.6.1",
     "lodash.clonedeep": "^4.5.0",
     "microbundle": "^0.13.3",
-    "style-to-object": "^0.3.0"
+    "style-to-object": "^0.3.0",
+    "typescript": "^4.3.4"
   },
   "license": "MIT",
   "author": "",
