--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,18 +22,21 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "microbundle": "^0.13.3"
   },
+  "peerDependencies": {
+    "@saasquatch/universal-hooks": "^1.0.0"
+  },
   "dependencies": {
-    "@emotion/css": "^11.1.3",
+    "@interactjs/core": "^1.10.11",
     "@popperjs/core": "^2.9.2",
-    "@saasquatch/universal-hooks": "^1.0.0",
-    "@types/css-tree": "^1.0.5",
     "@wry/equality": "^0.5.1",
     "css-tree": "*",
     "dom-serializer": "^0.2.2",
+    "domelementtype": "^2.2.0",
     "hotkeys-js": "^3.8.7",
     "htmlparser2": "^6.1.0",
     "interactjs": "^1.10.11",
     "lodash.clonedeep": "^4.5.0",
+    "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
   }
