--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -1,16 +1,23 @@
 {
   "name": "@raisins/example",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@interactjs/core": "^1.10.11",
+    "@raisins/core": "^1.0.0",
+    "@saasquatch/universal-hooks": "^1.0.0",
     "@shoelace-style/react": "2.0.0-beta.44",
+    "@shoelace-style/shoelace": "^2.0.0-beta.44",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/css-tree": "^1.0.5",
+    "hotkeys-js": "^3.8.7",
+    "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4",
