--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,8 +19,14 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@interactjs/core": "^1.10.11",
     "@raisins/core": "^1.0.0",
+    "@saasquatch/universal-hooks": "^1.0.0",
+    "@shoelace-style/shoelace": "^2.0.0-beta.44",
     "@types/css-tree": "^1.0.5",
+    "hotkeys-js": "^3.8.7",
+    "interactjs": "^1.10.11",
+    "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
   }
