--- a/packages/stencil-example/package.json
+++ b/packages/stencil-example/package.json
@@ -24,10 +24,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@emotion/css": "^11.1.3",
+    "@interactjs/core": "^1.10.11",
     "@interactjs/types": "^1.10.2",
     "@raisins/core": "^1.0.0",
     "@saasquatch/stencil-hooks": "^1.0.0",
-    "@saasquatch/universal-hooks": "^0.1.3",
+    "@saasquatch/universal-hooks": "^1.0.0",
     "@shoelace-style/shoelace": "^2.0.0-beta.25",
     "@stencil/core": "^1.17.4",
     "@types/css-tree": "^1.0.5",
@@ -43,6 +44,7 @@
     "json-pointer": "^0.6.1",
     "lodash.clonedeep": "^4.5.0",
     "microbundle": "^0.13.3",
+    "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
   },
