--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,7 @@
     "htmlparser2": "^6.1.0",
     "interactjs": "^1.10.11",
     "lodash.clonedeep": "^4.5.0",
+    "penpal": "^5.3.0",
     "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
