--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -15,6 +15,7 @@
     "@types/css-tree": "^1.0.5",
     "hotkeys-js": "^3.8.7",
     "interactjs": "^1.10.11",
+    "penpal": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
