--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,7 @@
     "@types/css-tree": "^1.0.5",
     "hotkeys-js": "^3.8.7",
     "interactjs": "^1.10.11",
+    "penpal": "^5.3.0",
     "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
