--- a/packages/stencil-example/package.json
+++ b/packages/stencil-example/package.json
@@ -44,6 +44,7 @@
     "json-pointer": "^0.6.1",
     "lodash.clonedeep": "^4.5.0",
     "microbundle": "^0.13.3",
+    "penpal": "^5.3.0",
     "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
     "typescript": "^4.3.4"
