--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,6 +29,8 @@
     "penpal": "^5.3.0",
     "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
-    "typescript": "^4.3.4"
+    "tag-params": "^1.0.6",
+    "typescript": "^4.3.4",
+    "uhtml": "^2.7.6"
   }
 }
