--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,6 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -47,12 +46,15 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "husky": "^7.0.2",
     "jest": "^25.5.4",
+    "jest-cucumber": "^3.0.1",
+    "jsonata": "^1.8.5",
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^3.9.10"
   },
   "dependencies": {
+    "css-select": "^4.1.3",
     "css-tree": "*",
     "domelementtype": "^2.2.0",
     "htmlparser2": "^6.1.0",
