--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,7 +62,9 @@
     "css-select": "^4.1.3",
     "css-tree": "*",
     "domelementtype": "^2.2.0",
+    "hotkeys-js": "^3.8.7",
     "htmlparser2": "^6.1.0",
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.clonedeep": "^4.5.0",
+    "penpal": "^6.1.0"
   }
 }
