--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,7 +49,10 @@
     }
   ],
   "dependencies": {
-    "@raisins/core": "^0.0.1"
+    "@raisins/core": "^0.0.1",
+    "css-tree": "^1.1.3",
+    "hotkeys-js": "^3.8.7",
+    "penpal": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -59,6 +62,7 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/addons": "^6.3.8",
     "@storybook/react": "^6.3.8",
+    "@types/css-tree": "^1.0.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
