--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,12 +40,15 @@
     }
   ],
   "devDependencies": {
+    "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@types/css-tree": "^1.0.5",
     "@types/domelementtype": "^2.0.1",
     "@types/jest": "^27.0.2",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/mz": "^2.7.4",
+    "@types/styled-components": "^5.1.14",
+    "classnames": "^2.3.1",
     "glob": "^7.2.0",
     "glob-promise": "^4.2.0",
     "husky": "^7.0.2",
@@ -59,12 +62,14 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "css-select": "^4.1.3",
     "css-tree": "*",
     "domelementtype": "^2.2.0",
     "hotkeys-js": "^3.8.7",
     "htmlparser2": "^6.1.0",
     "lodash.clonedeep": "^4.5.0",
-    "penpal": "^6.1.0"
+    "penpal": "^6.1.0",
+    "styled-components": "^5.3.1"
   }
 }
