--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,12 +50,15 @@
   ],
   "dependencies": {
     "@raisins/core": "^0.0.1",
+    "classnames": "^2.3.1",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
-    "penpal": "^6.1.0"
+    "penpal": "^6.1.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-info": "^5.3.21",
@@ -65,6 +68,7 @@
     "@types/css-tree": "^1.0.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.14",
     "babel-loader": "^8.2.2",
     "husky": "^7.0.2",
     "react": "*",
