--- a/packages/stencil-example/package.json
+++ b/packages/stencil-example/package.json
@@ -33,6 +33,7 @@
     "@stencil/core": "^1.17.4",
     "@types/css-tree": "^1.0.5",
     "@wry/equality": "^0.3.2",
+    "classnames": "^2.3.1",
     "css-tree": "^1.1.3",
     "debug": "^4.3.1",
     "dom-serializer": "^1.2.0",
@@ -47,6 +48,7 @@
     "penpal": "^6.1.0",
     "react-popper": "^2.2.5",
     "style-to-object": "^0.3.0",
+    "styled-components": "^5.3.1",
     "tag-params": "^1.0.6",
     "typescript": "^4.3.4",
     "uhtml": "^2.7.6"
@@ -55,6 +57,9 @@
   "author": "",
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
-    "@types/css-tree": "^1.0.6"
+    "@shoelace-style/react": "^2.0.0-beta.52",
+    "@types/css-tree": "^1.0.6",
+    "@types/styled-components": "^5.1.14",
+    "classnames": "^2.3.1"
   }
 }
