--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.5",
     "@types/domelementtype": "^2.0.1",
     "@types/jest": "^27.0.2",
