--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,7 +50,6 @@
   ],
   "dependencies": {
     "@raisins/core": "^0.0.1",
-    "classnames": "^2.3.1",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "penpal": "^6.1.0",
@@ -65,6 +64,7 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/addons": "^6.3.8",
     "@storybook/react": "^6.3.8",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
