--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -71,6 +71,7 @@
     "htmlparser2": "^6.1.0",
     "lodash.clonedeep": "^4.5.0",
     "penpal": "^6.1.0",
+    "snabbdom": "^3.1.0",
     "styled-components": "^5.3.1"
   }
 }
