--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -53,6 +53,7 @@
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "penpal": "^6.1.0",
+    "snabbdom": "^3.1.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
