--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -71,6 +71,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
     "babel-loader": "^8.2.2",
+    "custom-elements-manifest": "^1.0.0",
     "husky": "^7.0.2",
     "react": "*",
     "react-dom": "^16.14.0",
