--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,6 +50,7 @@
   ],
   "dependencies": {
     "@raisins/core": "^0.0.1",
+    "@raisins/schema": "^0.0.1",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "penpal": "^6.1.0",
