--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -55,6 +55,7 @@
     "hotkeys-js": "^3.8.7",
     "penpal": "^6.1.0",
     "snabbdom": "^3.1.0",
+    "split-on-first": "^3.0.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
