--- a/packages/schema/.gitignore
+++ b/packages/schema/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .DS_Store
 node_modules/
+
+# Generated (doesn't go in dist)
 schema.json
