--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.4",
     "@stencil/core": "^2.8.1",
+    "@types/jest": "^27.0.2",
+    "ajv": "^6",
     "husky": "^7.0.2",
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
