--- a/packages/stencil-docs-target/my-kitchen-sink/package.json
+++ b/packages/stencil-docs-target/my-kitchen-sink/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-kitchen-sink",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Kitchen Sink Example",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -20,7 +20,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "serve:package": "serve . ",
+    "serve:package": "serve . --cors",
     "start:raisins": "run-p start serve:package"
   },
   "dependencies": {
