LV: Local editing environment and attribute names

--- a/packages/stencil-docs-target/my-kitchen-sink/package.json
+++ b/packages/stencil-docs-target/my-kitchen-sink/package.json
@@ -2,6 +2,7 @@
   "name": "my-kitchen-sink",
   "version": "0.0.1",
   "description": "Kitchen Sink Example",
+  "raisins": "docs/raisins.json",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.mjs",
