--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,7 +18,6 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
@@ -54,6 +53,9 @@
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "penpal": "^6.1.0",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.20.2",
     "snabbdom": "^3.1.0",
     "split-on-first": "^3.0.0",
     "styled-components": "^5.3.1"
@@ -69,6 +71,9 @@
     "@storybook/react": "^6.3.8",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
+    "@types/prosemirror-schema-basic": "^1.0.2",
+    "@types/prosemirror-state": "^1.2.7",
+    "@types/prosemirror-view": "^1.19.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
