--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -52,6 +52,7 @@
     "@raisins/schema": "^0.0.1",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
+    "jotai": "^1.3.9",
     "penpal": "^6.1.0",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
