--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -53,6 +53,7 @@
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.3.9",
+    "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
