--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,11 +50,13 @@
   "dependencies": {
     "@raisins/core": "^0.0.1",
     "@raisins/schema": "^0.0.1",
+    "@types/prosemirror-keymap": "^1.0.4",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.3.9",
     "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
+    "prosemirror-keymap": "^1.1.4",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
