--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,8 +50,6 @@
   "dependencies": {
     "@raisins/core": "^0.0.1",
     "@raisins/schema": "^0.0.1",
-    "@types/prosemirror-commands": "^1.0.4",
-    "@types/prosemirror-keymap": "^1.0.4",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.3.9",
@@ -62,13 +60,10 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
-    "snabbdom": "^3.1.0",
-    "split-on-first": "^3.0.0",
-    "styled-components": "^5.3.1"
+    "snabbdom": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-info": "^5.3.21",
@@ -77,6 +72,8 @@
     "@storybook/react": "^6.3.8",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
+    "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-state": "^1.2.7",
     "@types/prosemirror-view": "^1.19.1",
@@ -90,6 +87,7 @@
     "react-dom": "^16.14.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
+    "styled-components": "^5.3.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
