--- a/packages/schema/.gitignore
+++ b/packages/schema/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .DS_Store
+.turbo
 node_modules/
 
 # Generated (doesn't go in dist)
