--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -12,14 +12,14 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "loganvolkers/raisins",
+  "repository": "saasquatch/raisins",
   "scripts": {
     "build": "typescript-json-schema --required --ignoreErrors schema.d.ts -o schema.json Package",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/loganvolkers/raisins/issues"
+    "url": "https://github.com/saasquatch/raisins/issues"
   },
   "devDependencies": {
     "typescript": "^4.4.3",
