--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^27.0.2",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/mz": "^2.7.4",
+    "@types/parse5": "^6.0.3",
     "@types/styled-components": "^5.1.14",
     "classnames": "^2.3.1",
     "glob": "^7.2.0",
@@ -56,6 +57,7 @@
     "jest-cucumber": "^3.0.1",
     "jsonata": "^1.8.5",
     "mz": "^2.7.0",
+    "parse5": "^6.0.1",
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
