--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
     "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/css": "0.0.33",
     "@types/css-tree": "^1.0.5",
     "@types/domelementtype": "^2.0.1",
     "@types/jest": "^27.0.2",
@@ -66,6 +67,7 @@
   "dependencies": {
     "@raisins/schema": "^0.0.1",
     "classnames": "^2.3.1",
+    "css": "^3.0.0",
     "css-select": "^4.1.3",
     "css-tree": "*",
     "domelementtype": "^2.2.0",
