--- a/packages/core/cypress/tsconfig.json
+++ b/packages/core/cypress/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"extends": "../tsconfig.json",
 	"include": [
-	  "integration/*.ts",
+	  "integration/**/*.ts",
+	  "stepsDefinition/**/*.ts",
 	  "support/*.ts",
 	  "../node_modules/cypress"
 	]
-}
+  }
