--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -88,6 +88,7 @@
     ]
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true
+    "nonGlobalStepDefinitions": false,
+    "stepDefinitions": "cypress/stepsDefinition"
   }
 }
