--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,6 +6,11 @@
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
   "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saasquatch/raisins",
+    "directory": "packages/react"
+  },
   "files": [
     "dist",
     "src"
