--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -12,11 +12,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "saasquatch/raisins",
+
   "scripts": {
     "build": "typescript-json-schema --required --ignoreErrors schema.d.ts -o schema.json Package",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saasquatch/raisins",
+    "directory": "packages/schema"
   },
   "bugs": {
     "url": "https://github.com/saasquatch/raisins/issues"
