--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -86,6 +86,7 @@
     "@types/prosemirror-view": "^1.19.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/resize-observer-browser": "^0.1.7",
     "@types/styled-components": "^5.1.14",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
