Public publish config

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "npmClient": "npm",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.1.0"
 }
