--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,6 +11,9 @@
     "url": "https://github.com/saasquatch/raisins",
     "directory": "packages/react"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist",
     "src"
@@ -98,5 +101,6 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
-  }
+  },
+  "gitHead": "8629058a0437bbea5bfb184c13855f4b58a8480f"
 }
