Cypress in codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,7 @@
 {
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "development",
+  "forwardPorts": [8080],
   "extensions": [
     "esbenp.prettier-vscode",
     // LiveShare : https://marketplace.visualstudio.com/items?itemName=ms-vsliveshare.vsliveshare
