Basic Cypress test

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -82,6 +82,7 @@
     "@storybook/react": "^6.3.8",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
+    "@types/jest": "^27.0.2",
     "@types/prosemirror-commands": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
@@ -93,9 +94,11 @@
     "@types/styled-components": "^5.1.14",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
+    "cypress": "^9.5.3",
     "husky": "^7.0.2",
     "react": "*",
     "react-dom": "^16.14.0",
+    "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
