--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,11 +1,11 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src", "types", "stories/Editor.tsx"],
+  "include": ["src", "types"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
     // To prevent this error: https://stackoverflow.com/questions/60270925/finding-resizeobserver-with-typescript-in-angular-9
-    "types": ["resize-observer-browser"],
+    "types": ["jest", "resize-observer-browser"],
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
