--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -96,6 +96,7 @@
     "custom-elements-manifest": "^1.0.0",
     "cypress": "^9.5.3",
     "husky": "^7.0.2",
+    "local-cypress": "^1.2.5",
     "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
