--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,10 @@
 {
   "npmClient": "npm",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.0"
+  "version": "0.1.1"
 }
