--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,8 @@
 {
   "npmClient": "npm",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.1"
+  "version": "0.1.0"
 }
