--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,19 @@
 {
   "name": "@raisins/core",
   "author": "Logan Volkers",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/raisins.esm.js",
   "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saasquatch/raisins",
+    "directory": "packages/core"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist",
     "src"
@@ -69,7 +77,7 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@raisins/schema": "^0.0.1",
+    "@raisins/schema": "^0.2.0",
     "classnames": "^2.3.1",
     "css": "^3.0.0",
     "css-select": "^4.1.3",
@@ -90,5 +98,6 @@
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": false,
     "stepDefinitions": "cypress/stepsDefinition"
-  }
+  },
+  "gitHead": "8629058a0437bbea5bfb184c13855f4b58a8480f"
 }
