--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raisins/schema",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Types (a.k.a. schema) for the Raisins ecosystem",
   "author": "Logan Volkers <logan@saasquat.ch>",
   "license": "MIT",
@@ -12,11 +12,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "saasquatch/raisins",
   "scripts": {
     "build": "typescript-json-schema --required --ignoreErrors schema.d.ts -o schema.json Package",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saasquatch/raisins",
+    "directory": "packages/schema"
   },
   "bugs": {
     "url": "https://github.com/saasquatch/raisins/issues"
