--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raisins/stencil-docs-target",
   "description": "A custom docs target for Stencil components. Edit in Raisins.",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "license": "MIT",
   "author": "Logan Volkers",
   "module": "dist/stencil.esm.js",
