--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -71,6 +71,8 @@
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
     "snabbdom": "^3.1.0",
+    "valtio": "^1.5.2",
+    "valtio-yjs": "^0.3.1",
     "y-webrtc": "^10.2.2",
     "yjs": "^13.5.34"
   },
