--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -70,7 +70,8 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
-    "snabbdom": "^3.1.0"
+    "snabbdom": "^3.1.0",
+    "valtio": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
