--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,6 +57,7 @@
     "@types/domelementtype": "^2.0.1",
     "@types/jest": "^27.4.1",
     "@types/lodash.clonedeep": "^4.5.6",
+    "@types/luxon": "^2.3.1",
     "@types/mz": "^2.7.4",
     "@types/parse5": "^6.0.3",
     "@types/styled-components": "^5.1.14",
@@ -87,6 +88,7 @@
     "hotkeys-js": "^3.8.7",
     "htmlparser2": "^6.1.0",
     "lodash.clonedeep": "^4.5.0",
+    "luxon": "^2.3.2",
     "penpal": "^6.1.0",
     "snabbdom": "^3.1.0",
     "styled-components": "^5.3.1"
