--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raisins/react",
   "author": "Logan Volkers",
-  "version": "0.7.0",
+  "version": "0.10.0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -71,6 +71,7 @@
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
     "snabbdom": "^3.1.0",
+    "style-to-object": "^0.3.0",
     "valtio": "^1.5.2"
   },
   "devDependencies": {
