--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -63,6 +63,7 @@
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.6.0",
     "jotai-molecules": "^1.0.3",
+    "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
     "prosemirror-commands": "^1.1.11",
