--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -73,6 +73,7 @@
     "prosemirror-view": "^1.20.2",
     "snabbdom": "^3.1.0",
     "style-to-object": "^0.3.0",
+    "throttle-debounce": "^5.0.0",
     "valtio": "^1.5.2"
   },
   "devDependencies": {
@@ -95,6 +96,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/resize-observer-browser": "^0.1.7",
     "@types/styled-components": "^5.1.14",
+    "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
     "cypress": "^9.5.3",
