Added github workflow, fixed build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "jest.jestCommandLine": "npm test --"
+  "jest.jestCommandLine": "npm test --",
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
