--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,11 +22,11 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "test:watch": "tsdx test --passWithNoTests --watch",
-    "lint": "tsdx lint",
+    "start": "dts watch",
+    "build": "dts build",
+    "test": "dts test --passWithNoTests",
+    "test:watch": "dts test --passWithNoTests --watch",
+    "lint": "dts lint",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
@@ -37,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "dts lint"
     }
   },
   "prettier": {
@@ -100,6 +100,7 @@
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
     "cypress": "^9.5.3",
+    "dts-cli": "^1.5.1",
     "husky": "^7.0.2",
     "local-cypress": "^1.2.5",
     "react": "*",
@@ -107,7 +108,6 @@
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
