--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -78,12 +78,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@mdx-js/react": "^2.1.1",
     "@size-limit/preset-small-lib": "^5.0.4",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addons": "^6.3.8",
-    "@storybook/react": "^6.3.8",
+    "@storybook/addons": "^6.4.22",
+    "@storybook/builder-vite": "^0.1.33",
+    "@storybook/react": "^6.4.22",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^27.0.2",
