--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,6 +48,7 @@
     }
   ],
   "devDependencies": {
+    "@saasquatch/scoped-autobindsteps": "^1.0.0",
     "@shoelace-style/react": "^2.0.0-beta.52",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@testing-library/react-hooks": "^7.0.2",
@@ -79,14 +80,12 @@
   },
   "dependencies": {
     "@raisins/schema": "^0.7.0",
-    "classnames": "^2.3.1",
     "color2k": "^2.0.0",
     "css": "^3.0.0",
     "css-select": "^5.1.0",
     "css-tree": "*",
     "domelementtype": "^2.2.0",
-    "hotkeys-js": "^3.8.7",
-    "htmlparser2": "^6.1.0",
+    "entities": "^4.3.0",
     "lodash.clonedeep": "^4.5.0",
     "luxon": "^2.3.2",
     "penpal": "^6.1.0",
