--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raisins/react",
   "author": "Logan Volkers",
-  "version": "0.65.0",
+  "version": "0.66.0-6",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
