--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -74,7 +74,8 @@
     "snabbdom": "^3.1.0",
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
-    "valtio": "^1.5.2"
+    "valtio": "^1.5.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
