--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -58,7 +58,7 @@
     }
   ],
   "dependencies": {
-    "@raisins/core": "^1.0.1",
+    "@raisins/core": "^1.0.2-1",
     "@raisins/schema": "^1.0.0",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
