--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/core",
   "author": "SaaSquatch Team",
   "description": "Core functions for manipulating and validating HTML and raisin nodes",
-  "version": "1.0.2-4",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/core.esm.js",
