--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "SaaSquatch Team",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.0",
+  "version": "1.1.1-0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
