--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raisins/react",
-  "author": "SaaSquatch Team",
+  "author": "Referral SaaSquatch Inc.",
   "description": "React package with tools for building a Raisins editor",
   "version": "1.1.0",
   "license": "MIT",
