--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@raisins/stencil-docs-target",
   "description": "A custom docs target for Stencil components. Edit in Raisins.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
-  "author": "SaaSquatch Team",
+  "author": "ReferralSaaSquatch.com, Inc.",
   "module": "dist/stencil-docs-target.esm.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
