--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@raisins/react",
-  "author": "SaaSquatch Team",
+  "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
