update schema, bump schema versions in all packages and publish

--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raisins/stencil-docs-target",
   "description": "A custom docs target for Stencil components. Edit in Raisins.",
-  "version": "1.0.1",
+  "version": "1.0.2-1",
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
   "module": "dist/stencil-docs-target.esm.js",
@@ -68,6 +68,6 @@
   },
   "homepage": "https://github.com/saasquatch/raisins",
   "dependencies": {
-    "@raisins/schema": "1.0.0"
+    "@raisins/schema": "^1.0.2-2"
   }
 }
