--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,6 @@
 {
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "development",
-  "forwardPorts": [8080],
-  "extensions": [
-    "esbenp.prettier-vscode",
-    // LiveShare : https://marketplace.visualstudio.com/items?itemName=ms-vsliveshare.vsliveshare
-    "ms-vsliveshare.vsliveshare",
-    // Cucumber: https://marketplace.visualstudio.com/items?itemName=alexkrechik.cucumberautocomplete
-    "alexkrechik.cucumberautocomplete"
-  ]
+  "name": "Playwright Testing",
+  "image": "mcr.microsoft.com/playwright:v1.36.0-jammy",
+  "forwardPorts": [9323],
+  "postCreateCommand": "npm install"
 }
