--- a/examples/my-kitchen-sink/package.json
+++ b/examples/my-kitchen-sink/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "my-kitchen-sink",
-  "version": "0.0.1",
-  "description": "Kitchen Sink Example",
+  "private": true,
   "raisins": "docs/raisins.json",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -28,11 +26,8 @@
     "@stencil/core": "^2.7.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
+    "@raisins/stencil-docs-target": "^1.0.1",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^10.0.0",
     "serve": "^12.0.1"
   },
   "license": "MIT"
