--- a/package.json
+++ b/package.json
@@ -2,25 +2,21 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap",
     "build": "turbo run build",
     "storybook": "turbo run storybook",
     "test": "turbo run test"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "lerna": "^4.0.0",
-    "turbo": "^1.0.28"
+    "turbo": "^1.13.3"
   },
   "turbo": {
-    "baseBranch": "origin/main",
     "pipeline": {
       "build": {
         "dependsOn": [
