Fix linting in core

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "turbo run build",
     "storybook": "turbo run storybook",
+    "lint": "turbo run lint",
     "test": "turbo run test"
   },
   "workspaces": [
