--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,7 @@
     "test": "tsdx test",
     "test:watch": "tsdx test --watch",
     "test:coverage": "tsdx test --coverage",
-    "lint": "tsdx lint",
+    "lint": "tsdx lint src",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "cypress:open": "cypress open"
