Run playwright tests

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,9 +25,11 @@
   },
   "scripts": {
     "start": "dts watch",
+    "dev:tests": "vitest",
     "build": "dts build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "run-p test:*",
+    "test:vitest": "vitest run",
+    "test:playwright": "playwright test",
     "lint": "eslint src",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -106,6 +108,7 @@
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.2.0",
     "jest-environment-jsdom": "^29.1.0",
+    "npm-run-all2": "^6.1.2",
     "playwright": "^1.44.0",
     "react": "*",
     "react-dom": "^16.14.0",
