--- a/examples/my-kitchen-sink/tsconfig.json
+++ b/examples/my-kitchen-sink/tsconfig.json
@@ -4,10 +4,7 @@
     "allowUnreachableCode": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2017"
-    ],
+    "lib": ["dom", "es2017"],
     "moduleResolution": "node",
     "module": "esnext",
     "target": "es2017",
@@ -15,12 +12,9 @@
     "noUnusedParameters": true,
     "jsx": "react",
     "jsxFactory": "h",
-    "strict": false
+    "strict": false,
+    "types": []
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
